// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'heiko' to 'karura' using bridgeSDK cross-chain 'HKO' > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": "(rounded 998)",
  "toChain": "(rounded 1.99)",
}
`;

exports[`'heiko' to 'karura' using bridgeSDK cross-chain 'HKO' > fee 1`] = `"(rounded 0.006)"`;

exports[`'heiko' to 'karura' using bridgeSDK cross-chain 'HKO' > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 1000,
  "toChain": 0,
}
`;
